# summarize

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Martino_Summarize_videos.ipynb  README.md  Summarize.ipynb  app.py  cobalt.proxy.env.example  docker-compose.cobalt.yml  docker-compose.proxy.yml  docker-compose.yml  package-lock.json  prompts.json  pyproject.toml  requirements.txt  setup.py  summarize_videos.ipynb  summarizer.example.yaml  summarizer.yaml  test.md
.agent/skills/summarize/: README.md  SKILL.md
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  publish-ghcr.yml  publish-pypi.yml
.streamlit/: config.toml
Video summaries examples/: Dr Cal Newport How to Enhance Focus and Improve Productivity.txt  Dr Cal Newport How to Enhance Focus and Improve Productivity_SUMMARY.txt  ngvOyccUzzY_captions_FINAL.md
extensions/raycast-summarize/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/raycast-summarize/src/: summarize-clipboard.tsx  summarize.tsx
fern/: docs.yml  fern.config.json
fern/apis/summarize/: generators.yml  openapi.json
fern/assets/: styles.css
fern/docs/pages/: how-it-works.mdx  welcome.mdx
fern/docs/pages/api-reference/: http-api.mdx
fern/docs/pages/features/: caching.mdx  transcription.mdx  visual-mode.mdx  webapp.mdx
fern/docs/pages/getting-started/: configuration.mdx  (+1 more)
summarizer/: __init__.py  __main__.py  api.py  api_utils.py  config.py  config_file.py  core.py  exceptions.py  handlers.py  multimodal.py  progress.py  prompts.json  prompts.py  proxy.py  requirements.txt  server.py  transcript_cache.py  transcription.py  visual.py  visual_api.py
summarizer/downloaders/: __init__.py  base.py  cobalt.py  manager.py  youtube.py  ytdlp.py
summarizer/engines/: gemini_video.py
tests/: test_api.py  test_api_key_lookup.py  test_config.py  test_config_file.py  test_litellm_provider.py  test_server.py  test_streamlit_config_helpers.py  test_tinypaste.py  test_transcription.py  test_video_downloaders.py  test_visual_mode.py
webapp/: __init__.py  clipboard.py  config.py  history.py  mermaid.py  state.py  summarization.py  theme.css  theme.py  tinypaste.py  ui.py
(+11 files in other folders)
